--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   google_fonts: ^4.0.4
   provider: ^6.0.5
   smooth_page_indicator: ^1.1.0
+  url_launcher: ^6.1.11
+  geolocator: ^11.0.0
+  location: ^5.0.3
+  flutter_spinkit: ^5.2.0
 
 dev_dependencies:
   flutter_test:
