--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   geolocator: ^11.0.0
   location: ^5.0.3
   flutter_spinkit: ^5.2.0
+  cached_network_image: ^3.3.1
+  toastification: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -74,6 +76,9 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/translations/
+    - assets/code_illustration.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
