--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   flutter_spinkit: ^5.2.0
   cached_network_image: ^3.3.1
   toastification: ^2.1.0
+  flutter_native_splash: ^2.2.19
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
@@ -105,3 +107,38 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+flutter_native_splash:
+  # color: "#4169E1"
+  # image: assets/tmp/ailogo1.png
+  color: "#f2f3f4"
+  image: assets/tmp/launch_icon_bright.png
+  # branding: assets/tmp/logo.png
+  # color_dark: "#121212"
+  # image_dark: assets/tmp/logo.png
+  # branding_dark: assets/tmp/logo.png
+
+  # android_12:
+  #   image: assets/tmp/logo.png
+  #   icon_background_color: "#ffffff"
+  #   image_dark: assets/tmp/logo.png
+  #   icon_background_color_dark: "#121212"
+
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/tmp/launch_icon_bright.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/tmp/launch_icon_bright.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: true
+    image_path: "assets/tmp/launch_icon_bright.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/tmp/launch_icon_bright.png"
